[package]
name = "bcachefs-tools"
version = "0.3.1"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>", "Kent Overstreet <kent.overstreet@linux.dev>" ]
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "bcachefs"
path = "src/bcachefs.rs"

[dependencies]
log = { version = "0.4", features = ["std"] }
colored = "2"
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
clap_complete = "4.3.2"
anyhow = "1.0"
libc = "0.2.69"
udev = "0.7.0"
uuid = "1.2.2"
errno = "0.2"
either = "1.5"
rpassword = "7"
bch_bindgen = { path = "bch_bindgen" }
byteorder = "1.3"
gimli = "0.29.0"
object = "0.35.0"
memmap2 = "0.9.4"
nom = "7.1.3"

[profile.release]
strip = "none"
